[gd_scene load_steps=121 format=2]

[ext_resource path="res://assets/Background Elements/Samples/colored_talltrees.png" type="Texture" id=1]
[ext_resource path="res://assets/Background Elements/PNG/cloud7.png" type="Texture" id=2]
[ext_resource path="res://assets/Background Elements/PNG/cloud6.png" type="Texture" id=3]
[ext_resource path="res://assets/Background Elements/PNG/cloud2.png" type="Texture" id=4]
[ext_resource path="res://assets/Props/strawman.png" type="Texture" id=5]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/Sprites/strike_sheet2.png" type="Texture" id=7]
[ext_resource path="res://scenes/MannyStrawman.gd" type="Script" id=8]
[ext_resource path="res://assets/idle-manny.png" type="Texture" id=9]
[ext_resource path="res://assets/run-manny.png" type="Texture" id=10]
[ext_resource path="res://assets/immortal.regular.ttf" type="DynamicFontData" id=34]
[ext_resource path="res://scenes/Continue Button.gd" type="Script" id=36]
[ext_resource path="res://assets/UI/Paperpanels--1h5l813w3r13988u2m/png/paper_panel_617_x_342.png" type="Texture" id=37]
[ext_resource path="res://assets/UI/medievalbutton/Button-65.png" type="Texture" id=38]

[sub_resource type="AtlasTexture" id=156]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 636, 645 )

[sub_resource type="AtlasTexture" id=157]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 636, 0, 636, 645 )

[sub_resource type="AtlasTexture" id=158]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1272, 0, 636, 645 )

[sub_resource type="AtlasTexture" id=159]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1908, 0, 636, 645 )

[sub_resource type="AtlasTexture" id=160]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 2544, 0, 636, 645 )

[sub_resource type="AtlasTexture" id=161]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 3180, 0, 636, 645 )

[sub_resource type="AtlasTexture" id=162]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 3816, 0, 636, 645 )

[sub_resource type="AtlasTexture" id=163]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 4452, 0, 636, 645 )

[sub_resource type="AtlasTexture" id=164]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 5088, 0, 636, 645 )

[sub_resource type="AtlasTexture" id=165]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 5724, 0, 636, 645 )

[sub_resource type="AtlasTexture" id=166]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 6360, 0, 636, 645 )

[sub_resource type="AtlasTexture" id=167]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 6996, 0, 636, 645 )

[sub_resource type="AtlasTexture" id=168]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 7632, 0, 636, 645 )

[sub_resource type="AtlasTexture" id=169]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 8268, 0, 636, 645 )

[sub_resource type="AtlasTexture" id=170]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 8904, 0, 636, 645 )

[sub_resource type="AtlasTexture" id=171]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 9540, 0, 636, 645 )

[sub_resource type="AtlasTexture" id=172]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 10176, 0, 636, 645 )

[sub_resource type="AtlasTexture" id=173]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 10812, 0, 636, 645 )

[sub_resource type="AtlasTexture" id=174]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 11448, 0, 636, 645 )

[sub_resource type="AtlasTexture" id=175]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 12084, 0, 636, 645 )

[sub_resource type="AtlasTexture" id=176]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 12720, 0, 636, 645 )

[sub_resource type="AtlasTexture" id=177]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 13356, 0, 636, 645 )

[sub_resource type="AtlasTexture" id=178]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 13992, 0, 636, 645 )

[sub_resource type="AtlasTexture" id=179]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 14628, 0, 636, 645 )

[sub_resource type="AtlasTexture" id=126]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=127]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 621, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=128]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 1242, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=129]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 1863, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=130]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 2484, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=131]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 3105, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=132]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 3726, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=133]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 4347, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=134]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 4968, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=135]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 5589, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=136]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 6210, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=137]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 6831, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=138]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 7452, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=139]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 8073, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=140]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 8694, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=141]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 9315, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=142]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 9936, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=143]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 10557, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=144]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 11178, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=145]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 11799, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=146]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 12420, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=147]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 13041, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=148]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 13662, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=149]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 14283, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=150]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 14904, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=151]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 15525, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=74]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=75]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 621, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=76]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 1242, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=77]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 1863, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=78]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 2484, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=79]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 3105, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=80]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 3726, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=81]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 4347, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=82]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 4968, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=83]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 5589, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=84]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 6210, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=85]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 6831, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=86]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 7452, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=87]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 8073, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=88]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 8694, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=89]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 9315, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=90]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 9936, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=91]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 10557, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=92]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 11178, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=93]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 11799, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=94]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 12420, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=95]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 13041, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=96]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 13662, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=97]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 14283, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=98]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 14904, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=99]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 15525, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=100]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=101]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 621, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=102]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 1242, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=103]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 1863, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=104]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 2484, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=105]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 3105, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=106]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 3726, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=107]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 4347, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=108]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 4968, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=109]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 5589, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=110]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 6210, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=111]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 6831, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=112]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 7452, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=113]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 8073, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=114]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 8694, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=115]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 9315, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=116]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 9936, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=117]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 10557, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=118]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 11178, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=119]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 11799, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=120]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 12420, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=121]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 13041, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=122]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 13662, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=123]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 14283, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=124]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 14904, 0, 621, 489 )

[sub_resource type="AtlasTexture" id=125]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 15525, 0, 621, 489 )

[sub_resource type="SpriteFrames" id=152]
resource_local_to_scene = true
animations = [ {
"frames": [ SubResource( 156 ), SubResource( 157 ), SubResource( 158 ), SubResource( 159 ), SubResource( 160 ), SubResource( 161 ), SubResource( 162 ), SubResource( 163 ), SubResource( 164 ), SubResource( 165 ), SubResource( 166 ), SubResource( 167 ), SubResource( 168 ), SubResource( 169 ), SubResource( 170 ), SubResource( 171 ), SubResource( 172 ), SubResource( 173 ), SubResource( 174 ), SubResource( 175 ), SubResource( 176 ), SubResource( 177 ), SubResource( 178 ), SubResource( 179 ) ],
"loop": false,
"name": "Strike",
"speed": 24.0
}, {
"frames": [ SubResource( 126 ), SubResource( 127 ), SubResource( 128 ), SubResource( 129 ), SubResource( 130 ), SubResource( 131 ), SubResource( 132 ), SubResource( 133 ), SubResource( 134 ), SubResource( 135 ), SubResource( 136 ), SubResource( 137 ), SubResource( 138 ), SubResource( 139 ), SubResource( 140 ), SubResource( 141 ), SubResource( 142 ), SubResource( 143 ), SubResource( 144 ), SubResource( 145 ), SubResource( 146 ), SubResource( 147 ), SubResource( 148 ), SubResource( 149 ), SubResource( 150 ), SubResource( 151 ) ],
"loop": false,
"name": "idle",
"speed": 20.0
}, {
"frames": [ SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ), SubResource( 91 ), SubResource( 92 ), SubResource( 93 ), SubResource( 94 ), SubResource( 95 ), SubResource( 96 ), SubResource( 97 ), SubResource( 98 ), SubResource( 99 ), SubResource( 100 ), SubResource( 101 ), SubResource( 102 ), SubResource( 103 ), SubResource( 104 ), SubResource( 105 ), SubResource( 106 ), SubResource( 107 ), SubResource( 108 ), SubResource( 109 ), SubResource( 110 ), SubResource( 111 ), SubResource( 112 ), SubResource( 113 ), SubResource( 114 ), SubResource( 115 ), SubResource( 116 ), SubResource( 117 ), SubResource( 118 ), SubResource( 119 ), SubResource( 120 ), SubResource( 121 ), SubResource( 122 ), SubResource( 123 ), SubResource( 124 ), SubResource( 125 ) ],
"loop": true,
"name": "run",
"speed": 40.0
} ]

[sub_resource type="DynamicFont" id=153]
size = 470
use_filter = true
font_data = ExtResource( 34 )

[sub_resource type="AtlasTexture" id=154]
flags = 4
atlas = ExtResource( 38 )
region = Rect2( 71.5625, 1701.26, 150.1, 158.65 )
filter_clip = true

[sub_resource type="AtlasTexture" id=155]
flags = 4
atlas = ExtResource( 38 )
region = Rect2( 223.562, 1698.41, 166.25, 167.2 )
filter_clip = true

[node name="Node2D" type="Node2D"]

[node name="Background" type="TextureRect" parent="."]
margin_left = -16.0
margin_top = -19.0
margin_right = 1008.0
margin_bottom = 1006.0
rect_scale = Vector2( 1.93897, 1.08581 )
mouse_filter = 2
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="Cloud" type="TextureRect" parent="Background"]
margin_left = 20.1137
margin_top = 62.6263
margin_right = 1044.11
margin_bottom = 1087.63
rect_scale = Vector2( 0.260239, 0.292078 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="Cloud2" type="TextureRect" parent="Background"]
margin_left = 400.727
margin_top = 99.4653
margin_right = 1424.73
margin_bottom = 1124.47
rect_scale = Vector2( 0.260239, 0.292078 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="Cloud3" type="TextureRect" parent="Background"]
margin_left = 817.443
margin_top = 23.9454
margin_right = 1841.44
margin_bottom = 1048.95
rect_scale = Vector2( 0.176839, 0.258835 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="Strawman" type="TextureRect" parent="."]
margin_left = 1104.0
margin_top = 182.0
margin_right = 1144.0
margin_bottom = 222.0
rect_rotation = 179.57
rect_scale = Vector2( 26.1765, -23.4126 )
texture = ExtResource( 5 )
expand = true

[node name="MannyStrawman" type="KinematicBody2D" parent="."]
collision_layer = 2
collision_mask = 3
script = ExtResource( 8 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="MannyStrawman"]
position = Vector2( 1170, 588 )
scale = Vector2( 1.59109, 1.59109 )
frames = SubResource( 152 )
animation = "Strike"

[node name="Inventory" type="Node" parent="MannyStrawman"]

[node name="HUD" parent="MannyStrawman" instance=ExtResource( 6 )]
visible = false
margin_left = -15.0
margin_top = -40.0
margin_right = 2025.0
margin_bottom = 1160.0
rect_min_size = Vector2( 2040, 1200 )
rect_scale = Vector2( 0.950384, 0.950384 )

[node name="Timer" type="Timer" parent="MannyStrawman"]
wait_time = 0.747
autostart = true

[node name="strawmanDefeatPanel" type="TextureRect" parent="MannyStrawman"]
margin_left = 832.0
margin_top = 169.0
margin_right = 1449.0
margin_bottom = 511.0
rect_scale = Vector2( 1.65705, 2.45746 )
mouse_filter = 2
texture = ExtResource( 37 )

[node name="defeatTitle" type="Label" parent="MannyStrawman/strawmanDefeatPanel"]
margin_left = 19.0671
margin_top = 19.7787
margin_right = 3791.07
margin_bottom = 1184.78
rect_scale = Vector2( 0.15079, 0.139746 )
custom_colors/font_color = Color( 0.12549, 0.101961, 0.101961, 1 )
custom_colors/font_color_shadow = Color( 0.0705882, 0.0666667, 0.0666667, 1 )
custom_constants/shadow_offset_x = 0
custom_fonts/font = SubResource( 153 )
text = "You Attacked a Strawman"
align = 1
autowrap = true

[node name="lifeLostLabel" type="Label" parent="MannyStrawman/strawmanDefeatPanel"]
margin_left = -468.302
margin_top = -86.675
margin_right = 3762.7
margin_bottom = 494.325
rect_scale = Vector2( 0.0918807, 0.0897221 )
rect_pivot_offset = Vector2( 631.368, 309.896 )
custom_colors/font_color = Color( 0.623529, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.0705882, 0.0666667, 0.0666667, 1 )
custom_constants/shadow_offset_x = 0
custom_fonts/font = SubResource( 153 )
text = "You Lost 1 Life!"
align = 1

[node name="scoreLabel" type="Label" parent="MannyStrawman/strawmanDefeatPanel"]
margin_left = 39.6187
margin_top = 257.56
margin_right = 5438.62
margin_bottom = 838.56
rect_scale = Vector2( 0.0988003, 0.0817392 )
custom_colors/font_color = Color( 0.12549, 0.101961, 0.101961, 1 )
custom_colors/font_color_shadow = Color( 0.0705882, 0.0666667, 0.0666667, 1 )
custom_constants/shadow_offset_x = 0
custom_fonts/font = SubResource( 153 )
text = "Score: +0"
align = 1

[node name="Continue Button" type="TextureButton" parent="MannyStrawman/strawmanDefeatPanel"]
margin_left = 511.753
margin_top = 252.7
margin_right = 670.753
margin_bottom = 418.7
rect_scale = Vector2( 0.536353, 0.381184 )
texture_normal = SubResource( 154 )
texture_pressed = SubResource( 154 )
texture_hover = SubResource( 155 )
script = ExtResource( 36 )

[connection signal="animation_finished" from="MannyStrawman/AnimatedSprite" to="MannyStrawman" method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="MannyStrawman/Timer" to="MannyStrawman" method="_on_Timer_timeout"]
